fix subtitle too low

--- a/src/css/Netflix.css
+++ b/src/css/Netflix.css
@@ -251,7 +251,7 @@ transform-origin: top right;
   }
   
   .movie-grid-animated {
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
   }
 
